Cree una pagina en excel

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
         <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i>
         <span class="sr-only">CodePen</span>
       </a>
+
+      <a target="_blank" href="https://albegehtv.github.io/excel.html">
+        <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i>
+        <span class="sr-only">Curso de Excel UPE-Agro 2023 2do Curso</span>
+      </a>
     </div>
 	</main>
 </body>
