--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </a>
 
       <a target="_blank" href="https://albegehtv.github.io/excel.html">
-        <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i>
+        <i class="fas fa-file-excel fa-lg" aria-hidden="true" title="Excel"></i>
         <span class="sr-only">Curso de Excel UPE-Agro 2023 2do Curso</span>
       </a>
     </div>
