--- a/excel.html
+++ b/excel.html
@@ -41,14 +41,14 @@
 
     <section>
         <article>
-            <h2>Tutorial 1: Introducción a Excel</h2>
-            <p>En este tutorial aprenderás los conceptos básicos de Excel y cómo navegar por la interfaz.</p>
+            <h2>Tutorial 1: Crear gráficos con Excel</h2>
+            <p>Utilizar la herramienta Gráficos de Excel.</p>
             <a href="tutorial1.html">Ver tutorial</a>
         </article>
 
         <article>
-            <h2>Tutorial 2: Fórmulas Básicas</h2>
-            <p>Aprende a realizar operaciones matemáticas simples y a utilizar funciones básicas en Excel.</p>
+            <h2>Tutorial 2: Fórmulas Estadísticas</h2>
+            <p>Aprende a realizar operaciones Estadísticas simples y a utilizar funciones básicas en Excel.</p>
             <a href="tutorial2.html">Ver tutorial</a>
         </article>
 
