--- a/tutorial1.html
+++ b/tutorial1.html
@@ -16,6 +16,18 @@
             background-color: #f2f2f2;
         }
 
+        nav {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        nav a {
+            margin-right: 10px;
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+        }
+
         section {
             margin-top: 20px;
         }
@@ -54,6 +66,10 @@
     <header>
         <h1>Gráficos en Excel</h1>
     </header>
+
+    <nav>
+        <a href="excel.html">Volver a Excel</a>
+    </nav>
 
     <section>
         <article>
