--- a/ejercicios.html
+++ b/ejercicios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprendizaje de Fórmulas Estadísticas en Excel</title>
+    <title>Ejercicios de Fórmulas Estadísticas en Excel</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,27 +44,12 @@
             color: #666;
         }
 
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%;
-            padding-top: 30px;
-            height: 0;
-            overflow: hidden;
-        }
-
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Aprendizaje de Fórmulas Estadísticas en Excel</h1>
+        <h1>Ejercicios de Fórmulas Estadísticas en Excel</h1>
     </header>
 
     <nav>
@@ -73,126 +58,34 @@
 
     <section>
         <article>
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/tNvV3B-UgJc?si=3b0e2b0ce4c14984" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-            <p>En este tutorial aprenderás diversas fórmulas estadísticas en Excel para el análisis de datos.</p>
-            <!-- Puedes agregar más contenido descriptivo si es necesario -->
+            <h2>Ejercicio 1</h2>
+            <p>Calcula el promedio de los siguientes datos: 15, 22, 18, 25, 20.</p>
         </article>
 
         <article>
-            <h2>Fórmula PROMEDIO</h2>
-            <p>Calcula el promedio de un conjunto de datos.</p>
-            <p>`=PROMEDIO(rango)`</p>
+            <h2>Ejercicio 2</h2>
+            <p>Encuentra la mediana de los siguientes datos: 12, 15, 18, 22, 25, 30.</p>
         </article>
 
         <article>
-            <h2>Fórmula MEDIANA</h2>
-            <p>Calcula la mediana de un conjunto de datos.</p>
-            <p>`=MEDIANA(rango)`</p>
+            <h2>Ejercicio 3</h2>
+            <p>Calcula la desviación estándar de los siguientes datos: 10, 15, 20, 25, 30.</p>
         </article>
 
         <article>
-            <h2>Fórmula DESVEST</h2>
-            <p>Calcula la desviación estándar de un conjunto de datos.</p>
-            <p>`=DESVEST(rango)`</p>
+            <h2>Ejercicio 4</h2>
+            <p>Encuentra la varianza de los siguientes datos: 5, 10, 15, 20, 25.</p>
         </article>
 
         <article>
-            <h2>Fórmula VAR</h2>
-            <p>Calcula la varianza de un conjunto de datos.</p>
-            <p>`=VAR(rango)`</p>
+            <h2>Ejercicio 5</h2>
+            <p>Calcula el coeficiente de correlación entre los siguientes conjuntos de datos:<br>
+                Conjunto 1: 10, 15, 20, 25, 30.<br>
+                Conjunto 2: 5, 10, 15, 20, 25.
+            </p>
         </article>
 
-        <article>
-            <h2>Fórmula COEFICIENTE.CORREL</h2>
-            <p>Calcula el coeficiente de correlación entre dos conjuntos de datos.</p>
-            <p>`=COEFICIENTE.CORREL(rango1, rango2)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula MIN</h2>
-            <p>Devuelve el valor mínimo en un conjunto de datos.</p>
-            <p>`=MIN(rango)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula MAX</h2>
-            <p>Devuelve el valor máximo en un conjunto de datos.</p>
-            <p>`=MAX(rango)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula PERCENTIL.INC</h2>
-            <p>Calcula el percentil de un conjunto de datos.</p>
-            <p>`=PERCENTIL.INC(rango, k)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula PERCENTRANK.INC</h2>
-            <p>Calcula la posición relativa de un valor en un conjunto de datos.</p>
-            <p>`=PERCENTRANK.INC(rango, x)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula CORREL</h2>
-            <p>Calcula el coeficiente de correlación entre dos conjuntos de datos.</p>
-            <p>`=CORREL(rango1, rango2)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula COVAR</h2>
-            <p>Calcula la covarianza entre dos conjuntos de datos.</p>
-            <p>`=COVAR(rango1, rango2)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula Z.ESTANDAR</h2>
-            <p>Calcula la puntuación z de un valor en un conjunto de datos.</p>
-            <p>`=Z.ESTANDAR(x, media, desvest)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula PERCENTIL.EXC</h2>
-            <p>Calcula el percentil excluyente de un conjunto de datos.</p>
-            <p>`=PERCENTIL.EXC(rango, k)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula PERCENTRANK.EXC</h2>
-            <p>Calcula la posición relativa excluyente de un valor en un conjunto de datos.</p>
-            <p>`=PERCENTRANK.EXC(rango, x)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula K.ESIMO.MENOR</h2>
-            <p>Devuelve el k-ésimo valor más pequeño en un conjunto de datos.</p>
-            <p>`=K.ESIMO.MENOR(rango, k)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula K.ESIMO.MAYOR</h2>
-            <p>Devuelve el k-ésimo valor más grande en un conjunto de datos.</p>
-            <p>`=K.ESIMO.MAYOR(rango, k)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula Z.DIST</h2>
-            <p>Calcula la puntuación z de un valor en una distribución normal estándar.</p>
-            <p>`=Z.DIST(x, acumulado)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula Z.DIST.RT</h2>
-            <p>Calcula la puntuación z de una cola derecha en una distribución normal estándar.</p>
-            <p>`=Z.DIST.RT(x)`</p>
-        </article>
-
-        <article>
-            <h2>Fórmula PERCENTIL</h2>
-            <p>Calcula el percentil de un conjunto de datos.</p>
-            <p>`=PERCENTIL(rango, k)`</p>
-        </article>
+        <!-- Puedes agregar más ejercicios aquí -->
 
     </section>
 
