--- a/tutorial2.html
+++ b/tutorial2.html
@@ -77,7 +77,7 @@
     <section>
         <article>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/tNvV3B-UgJc?si=3b0e2b0ce4c14984" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://youtu.be/YNrA5Wp2uaA?si=zRqRiaJrTNHJSRP1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <p>En este tutorial aprenderás diversas fórmulas estadísticas en Excel para el análisis de datos.</p>
             <!-- Puedes agregar más contenido descriptivo si es necesario -->
