--- a/excel.html
+++ b/excel.html
@@ -36,18 +36,18 @@
 <body>
 
     <header>
-        <h1>Tutoriales de Excel</h1>
+        <h1>Clase Fecha 11/11/2023  Excel</h1>
     </header>
 
     <section>
         <article>
-            <h2>Tutorial 1: Crear gráficos con Excel</h2>
+            <h2>TEMA 1: Crear gráficos con Excel</h2>
             <p>Utilizar la herramienta Gráficos de Excel.</p>
             <a href="tutorial1.html">Ver tutorial</a>
         </article>
 
         <article>
-            <h2>Tutorial 2: Fórmulas Estadísticas</h2>
+            <h2>TEMA 2: Fórmulas Estadísticas</h2>
             <p>Aprende a realizar operaciones Estadísticas simples y a utilizar funciones básicas en Excel.</p>
             <a href="tutorial2.html">Ver tutorial</a>
         </article>
