--- a/excel.html
+++ b/excel.html
@@ -37,6 +37,12 @@
 
     <header>
         <h1>Clase Fecha 11/11/2023  Excel</h1>
+        <nav>
+            <a href="ejercicios.html">Ejercicios de Gráficos</a>
+        </nav>
+        <nav>
+            <a href="ejercicios1.html">Ejercicios de Estadísticas</a>
+        </nav>
     </header>
 
     <section>
