Actruluizacuin de titlos

--- a/excel.html
+++ b/excel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutoriales de Excel</title>
+    <title>Clase 14 Informática UPE-Agro Santa Rita</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -46,7 +46,7 @@
             <p>Utilizar la herramienta Gráficos de Excel.</p>
             <a href="tutorial1.html">Ver tutorial</a>
             <nav>
-                <a href="ejercicios.html">Ejercicios de Gráficos</a>
+                <a href="ejercicios1.html">Ejercicios de Gráficos</a>
             </nav>
            
         </article>
@@ -56,7 +56,7 @@
             <p>Aprende a realizar operaciones Estadísticas simples y a utilizar funciones básicas en Excel.</p>
             <a href="tutorial2.html">Ver tutorial</a>
             <nav>
-                <a href="ejercicios1.html">Ejercicios de Estadísticas</a>
+                <a href="ejercicios.html">Ejercicios de Estadísticas</a>
             </nav>
         </article>
 
