--- a/excel.html
+++ b/excel.html
@@ -41,6 +41,16 @@
     </header>
 
     <section>
+
+        <article>
+            <h2>Examen</h2>
+            <p>Examen.</p>
+            <a href="examen.html">Ver tutorial</a>
+            <nav>
+                <a href="examen.html">Examen</a>
+            </nav>
+           
+        </article>
         <article>
             <h2>TEMA 1: Crear gráficos con Excel</h2>
             <p>Utilizar la herramienta Gráficos de Excel.</p>
