--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hola, Soy Alberto C.Rodriguez G. !</div>
+		<div class="intro">Hola, Soy Alberto C. Rodriguez G. !</div>
 		<div class="tagline">All-Star Dev | Linux Adm | E-Commerce Dev</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 
@@ -35,7 +35,10 @@
         <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
         <span class="sr-only">LinkedIn</span>
       </a>
-    
+      <a target="_blank" href=https://albegehtv.github.io/cv.html">
+        <i class="fas fa-file-alt" aria-hidden="true" title="Curriculum Vitae"></i>
+        <span class="sr-only">Curriculum Vitae</span>
+    </a>
     
       <a target="_blank" href="https://github.com/albegehtv">
         <i class="fab fa-github" aria-hidden="true" title="Github"></i>
@@ -68,10 +71,6 @@
         <span class="sr-only">CodePen</span>
       </a>
 
-      <a target="_blank" href="https://albegehtv.github.io/excel.html">
-        <i class="fas fa-file-excel fa-lg" aria-hidden="true" title="Excel"></i>
-        <span class="sr-only">Curso de Excel UPE-Agro 2023 2do Curso</span>
-      </a>
     </div>
 	</main>
 </body>
