--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
         <span class="sr-only">LinkedIn</span>
       </a>
-      <a target="_blank" href=https://albegehtv.github.io/cv.html">
+      <a target="_blank" href="https://albegehtv.github.io/cv.html">
         <i class="fas fa-file-alt" aria-hidden="true" title="Curriculum Vitae"></i>
         <span class="sr-only">Curriculum Vitae</span>
     </a>
